--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 	<link rel="stylesheet" href="css/app.css">
 	<!-- endbuild -->
 </head>
-<body class="theme-orange">
+<body class="theme-lightblue">
 	<div class="statusbar-overlay"></div>
 	<div class="panel-overlay"></div>
 	<div class="panel panel-right panel-reveal">
@@ -68,7 +68,7 @@
 	</div>
 	<div class="views">
 		<div class="view view-main hidden-navbar" id="mainView">
-			<div class="navbar">
+			<div class="navbar navbar-lightblue">
 
 			</div>
 			<div class="pages navbar-through no-toolbar">
