--- a/src/profile.html
+++ b/src/profile.html
@@ -50,6 +50,16 @@
 					<li>
 						<div class="item-content">
 							<div class="item-inner">
+								<div class="item-title label">身份证有效期</div>
+								<div class="item-input">
+									<input type="date" name="aaa">
+								</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="item-content">
+							<div class="item-inner">
 								<div class="item-title label">身份证住址</div>
 								<div class="item-input">
 									<textarea name="cidAddr" placeholder="您的身份证住址">{{model.cidAddr}}</textarea>
