--- a/src/select/account.html
+++ b/src/select/account.html
@@ -8,28 +8,28 @@
 		</div>
 		<div class="center sliding">{{title}}</div>
 		<div class="right">
-			<a href="#" class="link select-all">
-				<span>全选</span>
+			<a href="#" class="link icon-only open-panel">
+				<i class="icon icon-bars"></i>
 			</a>
 		</div>
 	</div>
 </div>
 
 <div class="pages navbar-through no-toolbar">
-	<div data-page="account" class="page">
+	<div data-page="accountList" class="page">
 		<div class="page-content">
 			<div class="list-block" id="accountList">
 				<script id="accountTemplate" type="text/template">
 				<ul>
-					{{#each model.accountList}}
+					{{#each model}}
 						<li>
 							<label class="label-checkbox item-content">
-								<input type="checkbox" name="{{name}}" value="{{value}}">
+								<input type="checkbox" name="{{../groupName}}" value="{{prompt}}" data-code="{{code}}" data-type="{{type}}">
 								<span class="item-media">
 									<i class="icon icon-form-checkbox"></i>
 								</span>
 								<div class="item-inner">
-									<div class="item-title">{{text}}</div>
+									<div class="item-title">{{prompt}}</div>
 								</div>
 							</label>
 						</li>
