--- a/src/account.html
+++ b/src/account.html
@@ -23,8 +23,11 @@
 							<div class="item-content">
 								<div class="item-inner">
 									<div class="item-title">股票及场内基金</div>
-									<div class="item-after"></div>
 								</div>
+							</div>
+							<div class="result clearfix">
+								<div class="item-before">已选择</div>
+								<div class="item-after"></div>
 							</div>
 						</a>
 					</li>
@@ -38,8 +41,11 @@
 							<div class="item-content">
 								<div class="item-inner">
 									<div class="item-title">开放式基金及理财产品</div>
-									<div class="item-after"></div>
 								</div>
+							</div>
+							<div class="result clearfix">
+								<div class="item-before">已选择</div>
+								<div class="item-after"></div>
 							</div>
 						</a>
 					</li>
@@ -51,8 +57,11 @@
 							<div class="item-content">
 								<div class="item-inner">
 									<div class="item-title">创新产品</div>
-									<div class="item-after"></div>
 								</div>
+							</div>
+							<div class="result clearfix">
+								<div class="item-before">已选择</div>
+								<div class="item-after"></div>
 							</div>
 						</a>
 					</li>
@@ -64,8 +73,11 @@
 							<div class="item-content">
 								<div class="item-inner">
 									<div class="item-title">增值服务</div>
-									<div class="item-after"></div>
 								</div>
+							</div>
+							<div class="result clearfix">
+								<div class="item-before">已选择</div>
+								<div class="item-after"></div>
 							</div>
 						</a>
 					</li>
