--- a/src/account.html
+++ b/src/account.html
@@ -12,80 +12,35 @@
 <div class="pages navbar-through no-toolbar">
 	<div data-page="account" class="page">
 		<div class="page-content" id="accountContent">
+			<script id="accountTemplate" type="text/template">
 			<div class="list-block">
 				<ul>
+					{{#each model}}
 					<li>
-						<a href="#" class="item-link smart-select" data-page-title="股票及场内基金">
-							<select name="stock" multiple>
-								<option value="1" data-type="1002" selected>上海A股</option>
-								<option value="2" data-type="1002" selected>深圳A股</option>
+						<a href="#" class="item-link smart-select" data-page-title="{{accountTitle}}">
+							<select name="{{@index}}" multiple>
+								{{#each accountInfo}}
+								<option value="{{code}}" data-type="{{type}}" {{#if check}}selected{{/if}}>{{prompt}}</option>
+								{{/each}}
 							</select>
 							<div class="item-content">
 								<div class="item-inner">
-									<div class="item-title">股票及场内基金</div>
+									<div class="item-title">{{accountTitle}}</div>
 								</div>
 							</div>
 							<div class="result clearfix">
-								<div class="item-before">已选择</div>
+								<div class="item-before"></div>
 								<div class="item-after"></div>
 							</div>
 						</a>
 					</li>
-					<li>
-						<a href="#" class="item-link smart-select" data-page-title="开放式基金及理财产品">
-							<select name="fund" multiple>
-								<option value="9" data-type="1002" selected>OTC</option>
-								<option value="011" data-type="1003" selected>上海开放式基金</option>
-								<option value="022" data-type="1003" selected>深圳开放式基金</option>
-							</select>
-							<div class="item-content">
-								<div class="item-inner">
-									<div class="item-title">开放式基金及理财产品</div>
-								</div>
-							</div>
-							<div class="result clearfix">
-								<div class="item-before">已选择</div>
-								<div class="item-after"></div>
-							</div>
-						</a>
-					</li>
-					<li>
-						<a href="#" class="item-link smart-select" data-page-title="创新产品">
-							<select name="creative" multiple>
-								<option value="008" data-type="1003" selected>收益宝（将同时开通富国基金账户）</option>
-							</select>
-							<div class="item-content">
-								<div class="item-inner">
-									<div class="item-title">创新产品</div>
-								</div>
-							</div>
-							<div class="result clearfix">
-								<div class="item-before">已选择</div>
-								<div class="item-after"></div>
-							</div>
-						</a>
-					</li>
-					<li>
-						<a href="#" class="item-link smart-select" data-page-title="增值服务">
-							<select name="service" multiple>
-								<option value="1" data-type="1006" selected>消费支付</option>
-							</select>
-							<div class="item-content">
-								<div class="item-inner">
-									<div class="item-title">增值服务</div>
-								</div>
-							</div>
-							<div class="result clearfix">
-								<div class="item-before">已选择</div>
-								<div class="item-after"></div>
-							</div>
-						</a>
-					</li>
+					{{/each}}
 				</ul>
 			</div>
 			<div class="content-block">
 				<a href="#" class="button button-big button-fill account-next-button">下一步</a>
 			</div>
+			</script>
 		</div>
 	</div>
 </div>
