--- a/src/video.html
+++ b/src/video.html
@@ -47,7 +47,7 @@
 					</div>
 				</div>
 				<div class="content-block">
-					<a href="#" class="button button-big button-fill fixed-bottom video-start-button">开始视频</a>
+					<a href="#" class="button button-big button-fill video-start-button">开始视频</a>
 				</div>
 			</div>
 			<div class="video-content" id="videoWait" style="display: none;">
