--- a/src/faq.html
+++ b/src/faq.html
@@ -10,7 +10,7 @@
 </div>
 
 <div class="pages navbar-through no-toolbar">
-	<div data-page="appoint" class="page">
+	<div class="page">
 		<div class="page-content" id="faqContent">
 			<div class="content-block-title">
 				1. 如何通过手机客户端进行自助开户？
