--- a/src/collect.html
+++ b/src/collect.html
@@ -51,7 +51,7 @@
 							<i class="icon icon-form-checkbox"></i>
 						</div>
 						<div class="item-inner">
-							<div class="item-title">我已阅读并同意签署<a id="protocalLink" href="protocal.html?econtract_id={{model.econtractId}}">《个人数字证书申请责任书》</a></div>
+							<div class="item-title">我已阅读并同意签署<a id="protocalLink" href="#">《个人数字证书申请责任书》</a></div>
 						</div>
 					</label>
 				</div>
