When goto protocal page, keep previous page

--- a/src/protocal-upload.html
+++ b/src/protocal-upload.html
@@ -11,11 +11,11 @@
 </div>
 
 <div class="pages navbar-through no-toolbar">
-	<div class="page">
+	<div class="page" data-keep-pre="true">
 		<div class="page-content" id="protocalContent">
 			<div class="content-block">
 				<p>
-					<div id="protocalContent"><p class="t_int"></p><p align="left"><strong>注：新开证券账户的客户应认真阅读《个人数字证书申请责任书》，已有证券账户的客户应认真阅读《天威诚信个人数字证书申请责任书》，客户点选“我已知晓并同意签署”后即视为已经阅读并同意接受对应责任书的内容。 </strong></p><div class="title"><h2>个人数字证书申请责任书</h2></div><br><br>
+					<div><p class="t_int"></p><p align="left"><strong>注：新开证券账户的客户应认真阅读《个人数字证书申请责任书》，已有证券账户的客户应认真阅读《天威诚信个人数字证书申请责任书》，客户点选“我已知晓并同意签署”后即视为已经阅读并同意接受对应责任书的内容。 </strong></p><div class="title"><h2>个人数字证书申请责任书</h2></div><br><br>
 					<p>为确保数字证书能正确标识申请人身份，明确电子认证各方的义务和责任，申请人在申请和使用中国结算CA系统签发的数字证书时，须认真阅读《个人数字证书申请责任书》（以下简称“本责任书”）。申请人在纸质的《个人数字证书业务申请表》上签字后或在线阅读电子版的本责任书并选择接受后，则表示申请人已经认真阅读和理解本责任书，并同意接受本责任书的各项规定。若您不同意本责任书的全部或部分规定，请勿申请和使用中国结算CA系统签发的数字证书。 </p>
 					<p><strong>(一) </strong>个人数字证书是经中国结算CA系统签发的包含个人信息的数字证书，它用于标志自然人在进行信息交换、电子签名、电子商务等网络活动中的身份。 </p>
 					<p><strong>(二)</strong> 在申请和使用证书及其相关服务前，申请人还须了解并遵守《中国结算数字证书认证业务指引（试行）》、《中国结算数字证书认证业务业务指南（试行）》的相关内容及其他与证书相关的义务及法律责任。《中国结算数字证书认证业务指引（试行）》和《中国结算数字证书认证业务指南（试行）》公布在中国结算网站上（<a target="_blank" href="http://www.chinaclear.cn">www.chinaclear.cn</a>）。 </p>
