--- a/src/protocal.html
+++ b/src/protocal.html
@@ -11,7 +11,7 @@
 </div>
 
 <div class="pages navbar-through no-toolbar">
-	<div data-page="protocal" class="page">
+	<div data-keep-pre="true" data-page="protocal" class="page">
 		<div class="page-content" id="protocalContent">
 			<script id="protocalTemplate" type="text/template">
 			<div class="content-block">
