--- a/src/sign.html
+++ b/src/sign.html
@@ -17,15 +17,15 @@
 <div class="pages navbar-through no-toolbar">
 	<div data-page="sign" class="page">
 		<div class="page-content" id="signContent">
-			<script id="signTemplate" type="text/template">
-			<div class="indicator">
-				<ol class="step clearfix">
-					<li class="step-item">身份验证</li>
-					<li class="step-item current">协议签署</li>
-					<li class="step-item">三方存管</li>
-				</ol>
-			</div>
-			<div class="content-block-title">签署协议</div>
+            <script id="signTemplate" type="text/template">
+            <div class="indicator">
+                <ol class="step clearfix">
+                    <li class="step-item">身份验证</li>
+                    <li class="step-item current">协议签署</li>
+                    <li class="step-item">三方存管</li>
+                </ol>
+            </div>
+            <div class="content-block-title">业务开通完成后，您可登陆我公司网上营业厅调阅所签署的协议内容</div>
 			<div class="list-block">
 				<ul>
 					{{#model.protocals}}
