--- a/src/maintain.html
+++ b/src/maintain.html
@@ -1,20 +1,13 @@
 <div class="navbar">
     <div class="navbar-inner">
         <div class="center sliding">系统维护中</div>
-        <div class="right">
-            <a href="#" class="link icon-only open-panel">
-                <i class="icon icon-bars"></i>
-            </a>
-        </div>
     </div>
 </div>
 
 <div class="pages navbar-through no-toolbar">
-    <div data-page="maintain" class="page">
+    <div data-page="maintain" class="page maintain-page">
         <div class="page-content">
-           <div class="content-block inset">
-                系统维护中，请稍后再来
-           </div>
+           <div class="center">系统维护中<br>请稍后再来</div>
         </div>
     </div>
 </div>
