--- a/src/login.html
+++ b/src/login.html
@@ -44,7 +44,12 @@
 					<div class="col-33"><i class="iconfont icon-wifi"></i><br>3G或Wi-Fi</div>
 				</div>
 			</div>
-			<div class="copyright">©中华证券版权所有</div>
+			<div class="content-block prepare">
+				<p class="prepare-title">支持银行</p>
+				<div class="tc" style="margin-top:10px">
+					<img src="img/banks.png" alt="支持银行" width="260" height="60">
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
