--- a/src/department.html
+++ b/src/department.html
@@ -10,7 +10,7 @@
 </div>
 
 <div class="pages navbar-through no-toolbar">
-	<div data-page="departments" class="page">
+	<div data-page="department" class="page">
 		<div class="page-content" id="departmentContent">
 			<div class="indicator">
 				<ol class="step clearfix">
@@ -45,22 +45,17 @@
 					</ul>
 				</div>
 			</div>
-			<div class="content-block-title">
-				如有推荐人，请填写
-			</div>
-			<div class="list-block">
-				<ul>
-					<li>
-						<div class="item-content">
-							<div class="item-inner">
-								<div class="item-input">
-									<input type="tel" maxlength="11" name="recphone" placeholder="推荐人手机号">
-								</div>
-							</div>
-						</div>
-					</li>
+			<div class="package-block">
+				<div class="brand">套餐</div>
+				<div class="content-block-title">请选择服务套餐<small>（可选）</small></div>
+				<ul class="row" id="packages">
+
 				</ul>
+				<div class="tar">
+					<a class="package-detail" href="#">套餐详情&gt;</a>
+				</div>
 			</div>
+			<p class="package-choosen"></p>
 			<div class="content-block">
 				<a href="#" class="button button-big button-fill department-next-button">下一步</a>
 			</div>
@@ -81,13 +76,19 @@
 					{{#each model.departmentsAll}}
 						<optgroup label="{{group}}">
 							{{#departments}}
-								<option value="{{value}}">{{department}}</option>
+								<option value="{{value}}" data-commission="22‰">{{department}}</option>
 							{{/departments}}
 						</optgroup>
 					{{/each}}
 					</select>
 				</a>
 			{{/if}}
+			</script>
+
+			<script type="text/template" id="packageTemplate">
+				{{#each packsList}}
+					<li class="col-50" data-commission="{{commission}}">{{packageName}}</li>
+				{{/each}}
 			</script>
 		</div>
 	</div>
