营业部选择采用省市级联

--- a/src/department.html
+++ b/src/department.html
@@ -15,7 +15,7 @@
 </div>
 
 <div class="pages navbar-through no-toolbar">
-	<div data-page="department" class="page">
+	<div data-page="departments" class="page">
 		<div class="page-content" id="departmentContent">
 			<div class="indicator">
 				<ol class="step clearfix">
@@ -26,7 +26,7 @@
 			</div>
 			<div class="department-block">
 				<div class="department-badge">
-					<i class="iconfont icon-commend"></i> 推荐
+					<i class="iconfont icon-local"></i> 附近
 				</div>
 				<div class="department-name">
 					<h2>
