增加对营业部号的操作

--- a/src/tpl/deps.html
+++ b/src/tpl/deps.html
@@ -3,7 +3,7 @@
 		{{#each itemList}}
 		<li>
 			<label class="label-radio item-content">
-				<input type="radio" name="deps" value="">
+				<input type="radio" name="deps" value="{{value}}">
 				<div class="item-inner">
 					<div class="item-title">{{item}}</div>
 				</div>
