--- a/src/select/prov.html
+++ b/src/select/prov.html
@@ -1,7 +1,7 @@
 <div class="navbar">
 	<div class="navbar-inner">
 		<div class="left">
-			<a href="#" class="link icon-only back">
+			<a href="#" class="link icon-only" id="provBack">
 				<i class="icon icon-back"></i>
 			</a>
 		</div>
