--- a/src/guide.html
+++ b/src/guide.html
@@ -5,16 +5,18 @@
 	<div data-page="guide" class="page no-navbar">
 		<div class="page-content" id="guideContent">
 			<img class="logo" src="img/logo.png" width="100%" height="45px" alt="">
-			<div class="entrance">
+			<div class="entrances">
 				<script id="guideTemplate" type="text/template">
 				{{#each model.openTypes}}
-					<a class="{{name}}" data-type="{{type}}" href="#">{{explain}}</a>
+					<a class="{{name}} entrance" data-type="{{type}}" href="#">{{explain}}</a>
 				{{/each}}
-				<div class="content-block-title">
-					我们7*24小时接受您的开户请求，并将在1个工作日內通知您开户结果。
-				</div>
-				<div class="content-block-title">
-					客服热线: <a class="tel" href="#">62095271</a>
+				<div id="extraInfo">
+					<div class="content-block-title">
+						我们7*24小时接受您的开户请求，并将在1个工作日內通知您开户结果。
+					</div>
+					<div class="content-block-title">
+						客服热线: <a class="tel" href="#">62095271</a>
+					</div>
 				</div>
 				</script>
 			</div>
