--- a/src/profile.html
+++ b/src/profile.html
@@ -60,9 +60,9 @@
 					<li>
 						<div class="item-content">
 							<div class="item-inner">
-								<div class="item-title label">联系地址</div>
+								<div class="item-title label">联系地址<br><button class="button button-fill copy-above">同身份证</button></div>
 								<div class="item-input">
-									<textarea name="address" placeholder="您的联系地址">{{model.address}}</textarea>
+									<textarea name="address" placeholder="您的联系地址"></textarea>
 								</div>
 							</div>
 						</div>
