--- a/src/select/account.html
+++ b/src/select/account.html
@@ -1,7 +1,7 @@
 <div class="navbar">
 	<div class="navbar-inner">
 		<div class="left">
-			<a href="#" class="link back">
+			<a href="#" class="link" id="accountBack">
 				<i class="icon icon-back"></i>
 				<span>完成</span>
 			</a>
