选中营业部会出现 undefined 的错误修复

--- a/src/department.html
+++ b/src/department.html
@@ -1,129 +1,129 @@
 <div class="navbar">
-	<div class="navbar-inner">
-		<div class="left">
-			<a href="#" class="link icon-only back">
-				<i class="icon icon-back"></i>
-			</a>
-		</div>
-		<div class="center sliding">选择营业部</div>
-		<div class="right">
-			<a href="#" class="link icon-only open-panel">
-				<i class="icon icon-bars"></i>
-			</a>
-		</div>
-	</div>
+    <div class="navbar-inner">
+        <div class="left">
+            <a href="#" class="link icon-only">
+                <i class="icon icon-back"></i>
+            </a>
+        </div>
+        <div class="center sliding">选择营业部</div>
+        <div class="right">
+            <a href="#" class="link icon-only open-panel">
+                <i class="icon icon-bars"></i>
+            </a>
+        </div>
+    </div>
 </div>
 
 <div class="pages navbar-through no-toolbar">
-	<div data-page="departments" class="page">
-		<div class="page-content" id="departmentContent">
-			<div class="indicator">
-				<ol class="step clearfix">
-					<li class="step-item current">身份验证</li>
-					<li class="step-item">协议签署</li>
-					<li class="step-item">三方存管</li>
-				</ol>
-			</div>
-			<div class="department-block">
-				<div class="department-badge">
-					<i class="iconfont icon-local"></i> 附近
-				</div>
-				<div class="department-name">
-					<h2>
-						<a href="deps-detail.html?name=杭州测试营业部" class="department-header-link">杭州测试营业部</a>
-					</h2>
-				</div>
-				<div class="list-block">
-					<ul class="row no-gutter clearfix">
-						<li class="col-33">
-							<a href="#" class="item-link recommend-link">
-								<div class="item-inner">
-									<div class="item-title"><i class="iconfont icon-recommend"></i> 推荐</div>
-								</div>
-							</a>
-						</li>
-						<li class="col-33">
-							<a href="#" class="item-link nearby-link">
-								<div class="item-inner all">
-									<div class="item-title"><i class="iconfont icon-local"></i> 附近</div>
-								</div>
-							</a>
-						</li>
-						<li class="col-33">
-							<a href="#" class="item-link all-link">
-								<div class="item-inner all">
-									<div class="item-title"><i class="iconfont icon-lookfor"></i> 自选</div>
-								</div>
-							</a>
-						</li>
-					</ul>
-				</div>
-			</div>
-			<div class="content-block-title">
-				营销人员<span>（选填）</span>
-			</div>
-			<div class="list-block">
-				<ul>
-					<li>
-						<div class="item-content">
-							<div class="item-inner">
-								<div class="item-input">
-									<input type="tel" maxlength="11" id="recphone" name="recphone" placeholder="营销人员代码或手机号">
-									<a class="item-search button button-fill" href="#">查询</a>
-								</div>
-							</div>
-						</div>
-					</li>
-				</ul>
-			</div>
-			<div class="research-result">
-				<div class="have-result" style="">
-					<!-- <b><span>姓名：周杰伦</span>员工代码：123456789</b>
-						                <b>执业证书编号：S123123123123123123123</b>
-					<b><span>手机号码：18763435435</span>营销展示区域：上海地区</b>
-					<b>所属营业部：上海陆家嘴营业部</b> -->
+    <div data-page="departments" class="page">
+        <div class="page-content" id="departmentContent">
+            <div class="indicator">
+                <ol class="step clearfix">
+                    <li class="step-item current">身份验证</li>
+                    <li class="step-item">协议签署</li>
+                    <li class="step-item">三方存管</li>
+                </ol>
+            </div>
+            <div class="department-block">
+                <div class="department-badge">
+                    <i class="iconfont icon-local"></i> 附近
+                </div>
+                <div class="department-name">
+                    <h2>
+                        <a href="deps-detail.html?name=杭州测试营业部" class="department-header-link">杭州测试营业部</a>
+                    </h2>
+                </div>
+                <div class="list-block">
+                    <ul class="row no-gutter clearfix">
+                        <li class="col-33">
+                            <a href="#" class="item-link recommend-link">
+                                <div class="item-inner">
+                                    <div class="item-title"><i class="iconfont icon-recommend"></i> 推荐</div>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="col-33">
+                            <a href="#" class="item-link nearby-link">
+                                <div class="item-inner all">
+                                    <div class="item-title"><i class="iconfont icon-local"></i> 附近</div>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="col-33">
+                            <a href="#" class="item-link all-link">
+                                <div class="item-inner all">
+                                    <div class="item-title"><i class="iconfont icon-lookfor"></i> 自选</div>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="content-block-title">
+                营销人员<span>（选填）</span>
+            </div>
+            <div class="list-block">
+                <ul>
+                    <li>
+                        <div class="item-content">
+                            <div class="item-inner">
+                                <div class="item-input">
+                                    <input type="tel" maxlength="11" id="recphone" name="recphone" placeholder="营销人员代码或手机号">
+                                    <a class="item-search button button-fill" href="#">查询</a>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="research-result">
+                <div class="have-result" style="">
+                    <!-- <b><span>姓名：周杰伦</span>员工代码：123456789</b>
+                                        <b>执业证书编号：S123123123123123123123</b>
+                    <b><span>手机号码：18763435435</span>营销展示区域：上海地区</b>
+                    <b>所属营业部：上海陆家嘴营业部</b> -->
 
-				</div>
-				<div class="error-result" style="display:none;">
-					<p><i class="iconfont icon-noresult"></i>请输入有效的营销人员代码或手机号码</p>
-				</div>
-			</div>
-			<div class="content-block">
-				<a href="#" class="button button-big button-fill department-next-button">下一步</a>
-			</div>
-			<script id="marketerTemplate" type="text/template">
-			{{#each model}}
-				<b><span>姓名：{{broker_name}}</span>员工代码：{{broker_code}}</b>
-			    <b>执业证书编号：{{qualify_no}}</b>
-				<b><span>手机号码：{{mobile}}</span>营销展示区域：{{address}}</b>
-				<b>所属营业部：{{branch_name}}</b>
-			{{/each}}
-			</script>
-			<script id="departmentTemplate" type="text/template">
+                </div>
+                <div class="error-result" style="display:none;">
+                    <p><i class="iconfont icon-noresult"></i>请输入有效的营销人员代码或手机号码</p>
+                </div>
+            </div>
+            <div class="content-block">
+                <a href="#" class="button button-big button-fill department-next-button">下一步</a>
+            </div>
+            <script id="marketerTemplate" type="text/template">
+            {{#each model}}
+                <b><span>姓名：{{broker_name}}</span>员工代码：{{broker_code}}</b>
+                <b>执业证书编号：{{qualify_no}}</b>
+                <b><span>手机号码：{{mobile}}</span>营销展示区域：{{address}}</b>
+                <b>所属营业部：{{branch_name}}</b>
+            {{/each}}
+            </script>
+            <script id="departmentTemplate" type="text/template">
 
-			{{#if model.departmentsNearby}}
-				<a href="#" class="item-link smart-select" id="nearbySelect" data-page-title="附近营业部">
-					<select name="nearby" data-from="nearby">
-					{{#each model.departmentsNearby}}
-						<option value="{{value}}">{{department}}</option>
-					{{/each}}
-					</select>
-				</a>
-			{{/if}}
-			{{#if model.departmentsAll}}
-			<a href="#" class="item-link smart-select" id="allSelect" data-page-title="选择营业部" data-searchbar="true" data-searchbar-placeholder="营业部名称" data-searchbar-cancel="取消">
-				<select name="all" data-from="all">
-				{{#model.departmentsAll}}
-					<optgroup label="{{group}}">
-						{{#departments}}
-							<option value="{{value}}">{{department}}</option>
-						{{/departments}}
-					</optgroup>
-				{{/model.departmentsAll}}
-				</select>
-			</a>
-			{{/if}}
-			</script>
-		</div>
-	</div>
+            {{#if model.departmentsNearby}}
+                <a href="#" class="item-link smart-select" id="nearbySelect" data-page-title="附近营业部">
+                    <select name="nearby" data-from="nearby">
+                    {{#each model.departmentsNearby}}
+                        <option value="{{value}}">{{department}}</option>
+                    {{/each}}
+                    </select>
+                </a>
+            {{/if}}
+            {{#if model.departmentsAll}}
+            <a href="#" class="item-link smart-select" id="allSelect" data-page-title="选择营业部" data-searchbar="true" data-searchbar-placeholder="营业部名称" data-searchbar-cancel="取消">
+                <select name="all" data-from="all">
+                {{#model.departmentsAll}}
+                    <optgroup label="{{group}}">
+                        {{#departments}}
+                            <option value="{{value}}">{{department}}</option>
+                        {{/departments}}
+                    </optgroup>
+                {{/model.departmentsAll}}
+                </select>
+            </a>
+            {{/if}}
+            </script>
+        </div>
+    </div>
 </div>
