维护页 5 秒自动刷新

--- a/src/maintain/index.html
+++ b/src/maintain/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>系统维护中</title>
+    <meta http-equiv="refresh" content="5">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <style>
         * {
             margin: 0;
@@ -18,15 +22,18 @@
             background-image: linear-gradient(0deg, #20a8d5 0%, #0d79ca 100%);
         }
         .center {
+            position: absolute;
             top: 50%;
-            margin: 50% 15px 0 15px;
-            padding: 40px 65px;
+            left: 0;
+            width: 100%;
+            padding: 40px 0;
             text-align: center;
             font-size: 30px;
             font-weight: bold;
             border-bottom: 4px solid #fff;
             color: #fff;
             background-color: #319ed7;
+            -webkit-transform: translateY(-50%);
         }
     </style>
 </head>
