--- a/src/login.html
+++ b/src/login.html
@@ -12,9 +12,6 @@
 <div class="pages navbar-through no-toolbar">
 	<div data-page="login" class="page">
 		<div class="page-content ">
-			<div class="content-block-title desc">
-				我是新入市投资者，还没有股东账户
-			</div>
 			<div class="list-block">
 				<ul>
 					<li>
@@ -40,7 +37,7 @@
 				<p class="prepare-title">请准备好</p>
 				<div class="row">
 					<div class="col-33"><i class="iconfont icon-idcard"></i><br>二代身份证</div>
-					<div class="col-33"><i class="iconfont icon-bankcard"></i><br>银行卡</div>
+					<div class="col-33"><i class="iconfont icon-bankcard"></i><br>本人银行借记卡</div>
 					<div class="col-33"><i class="iconfont icon-wifi"></i><br>3G或Wi-Fi</div>
 				</div>
 			</div>
