营业部修改

--- a/src/department.html
+++ b/src/department.html
@@ -21,10 +21,10 @@
 			</div>
 			<div class="department-block">
 				<div class="department-badge">
-					<i class="iconfont icon-commend"></i> 推荐
+					<i class="iconfont icon-local"></i> 附近
 				</div>
 				<div class="department-name">
-					<h2>杭州测试营业部</h2>
+					<h2>无结果，请在“自选”中选择</h2>
 				</div>
 				<div class="list-block">
 					<ul class="row no-gutter clearfix">
