账户选择增加提示

--- a/src/select/account.html
+++ b/src/select/account.html
@@ -37,6 +37,7 @@
 				</ul>
 				</script>
 			</div>
+			<div class="content-block-title">温馨提示：投资者新开上海、深圳A股股东账户各收取开户费20元，我公司将在您资金转入到账后扣划相应的开户费用。</div>
 		</div>
 	</div>
 </div>
