--- a/src/department.html
+++ b/src/department.html
@@ -123,7 +123,7 @@
 
 			<script type="text/template" id="packageTemplate">
 				{{#each packsList}}
-					<li class="col-50" data-commission="{{commission}}">{{packageName}}</li>
+					<li class="col-50" data-commission="{{commission}}"{{#if checked}} data-checked="true"{{/if}}>{{packageName}}</li>
 				{{/each}}
 			</script>
 		</div>
