密码设置修改

--- a/src/password.html
+++ b/src/password.html
@@ -16,7 +16,7 @@
 
 <div class="pages navbar-through no-toolbar">
 	<div data-page="password" class="page">
-		<div class="page-content">
+		<div class="page-content" id="passwordContent">
 			<div class="indicator">
 				<ol class="step clearfix">
 					<li class="step-item">身份验证</li>
