logo 变形问题修正

--- a/src/guide.html
+++ b/src/guide.html
@@ -4,7 +4,7 @@
 <div class="pages navbar-through no-toolbar">
 	<div data-page="guide" class="page no-navbar">
 		<div class="page-content" id="guideContent">
-			<img class="logo" src="img/logo.png" width="100%" height="45px" alt="">
+			<img class="logo" src="img/logo.png" width="266" height="45px" alt="">
 			<div class="entrances">
 				<script id="guideTemplate" type="text/template">
 				{{#each model.openTypes}}
