--- a/src/popup/risk.html
+++ b/src/popup/risk.html
@@ -7,21 +7,24 @@
 		</div>
 	</div>
 	<div class="page">
-		<div class="page-content">
-			<div class="info-content vertical-align">
+		<div class="page-content" id="riskResult">
+			<div class="info-content">
 				<div class="info">
 					<div id="circle_area">
 						<canvas width="190" height="170" class="gauge"></canvas>
 						<!-- <div class="result">
 							<span class="number">{{model.riskScore}}</span>分
 						</div> -->
-						<div class="level">高风险承受型</div>
+						<div class="level">稳健型投资者</div>
 					</div>
 					<a class="close-popup button" id="retest" href="#">重新测评</a>
 				</div>
+				<div class="description">
+					您对投资的风险和回报都有深刻的了解，您更愿意用最小的风险来获得确定的收益。您是一个比较平稳的投资者。风险偏好偏低，稳健是您一贯的风格。
+				</div>
 			</div>
 			<div class="content-block">
-				<a href="#" class="button button-big button-fill fixed-bottom risk-next-button">下一步</a>
+				<a href="#" class="button button-big button-fill risk-next-button">下一步</a>
 			</div>
 		</div>
 	</div>
