--- a/src/sign.html
+++ b/src/sign.html
@@ -24,32 +24,51 @@
 					<li class="step-item">三方存管</li>
 				</ol>
 			</div>
+
 			<script id="signTemplate" type="text/template">
 			<div class="content-block-title">选择开通账户</div>
-			<div class="content-block">
-				<div class="row">
-					<div class="col-50">
-						<input class="select-radio" type="radio" name="accountStock" value="上海A股">
-						<a href="#" class="select-trigger">股票账户</a>
-					</div>
-					<div class="col-50">
-						<input class="select-radio" type="radio" name="accountFund" value="">
-						<a href="#" class="select-trigger">基金账户</a>
-					</div>
-				</div>
+			<div class="list-block">
+			  <ul>
+			  	{{#each stockAccountTypeList}}
+			    <li>
+			      <label class="label-checkbox item-content">
+			        <input type="checkbox" name="stockAccount" value="{{subentry}}">
+			        <div class="item-media">
+			          <i class="icon icon-form-checkbox"></i>
+			        </div>
+			        <div class="item-inner">
+			          <div class="item-title">{{dict_prompt}}</div>
+			        </div>
+			      </label>
+			    </li>
+			    {{/each}}
+			    {{#each fundAccountTypeList}}
+			    <li>
+			      <label class="label-checkbox item-content">
+			        <input type="checkbox" name="fundAccount" value="{{subentry}}">
+			        <div class="item-media">
+			          <i class="icon icon-form-checkbox"></i>
+			        </div>
+			        <div class="item-inner">
+			          <div class="item-title">{{dict_prompt}}</div>
+			        </div>
+			      </label>
+			    </li>
+			    {{/each}}
+			  </ul>
 			</div>
 			<div class="content-block-title">签署协议</div>
 			<div class="list-block">
 				<ul>
-					{{#model.protocals}}
+					{{#each protocalList}}
 					<li>
-						<a href="protocal.html?econtract_id={{id}}" class="item-link item-content protocal-link">
+						<a href="protocal.html?econtract_id={{econtract_id}}" class="item-link item-content protocal-link">
 						<div class="item-inner">
-								<div class="item-title">{{name}}</div>
+								<div class="item-title">{{econtract_name}}</div>
 							</div>
 						</a>
 					</li>
-					{{/model.protocals}}
+					{{/each}}
 				</ul>
 			</div>
 			<div class="content-block-title">
